correction: general corrections
